--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>Document</title>
 </head>
 <body>
-$END$
+    <div id="root"></div>
+
+
+<!--    Create by DOM-->
+<!--    <script>-->
+<!--        const root = document.querySelector('#root');-->
+<!--        const element = document.createElement('h1');-->
+
+<!--        element.textContent = 'Hello from js';-->
+<!--        element.className = 'heading-1';-->
+
+<!--        root.appendChild(element);-->
+<!--    </script>-->
+
+
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script>
+        const root = document.querySelector('#root');
+
+        const element = React.createElement('h1', {
+            children: 'Hello From React!',
+            className: 'heading-1',
+        });
+
+        ReactDOM.render(element, root);
+    </script>
 </body>
 </html>
